--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>psynet</groupId>
     <artifactId>psynet</artifactId>
     <packaging>war</packaging>
-    <version>1.0</version>
+    <version>1.0-SNAPSHOT</version>
     <name>psynet</name>
   
     <properties>
@@ -13,6 +13,10 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
+	
+	<scm>
+        <developerConnection>scm:git:https://github.com/sakolinkirill/testrepo.git</developerConnection>
+    </scm>
     
     <dependencies>
         <dependency>
@@ -56,6 +60,11 @@
                     <source>1.7</source>
                     <target>1.7</target>
                 </configuration>
+            </plugin>
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+                <version>2.5.3</version>
             </plugin>
         </plugins>
     </build>
