--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>psynet</groupId>
     <artifactId>psynet</artifactId>
     <packaging>war</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <name>psynet</name>
   
     <properties>
@@ -16,7 +16,8 @@
 	
 	<scm>
         <developerConnection>scm:git:https://github.com/sakolinkirill/testrepo.git</developerConnection>
-    </scm>
+      <tag>psynet-1.0</tag>
+  </scm>
     
     <dependencies>
         <dependency>
